# dotty

./: .coveragerc  .flake8  .gitignore  Makefile  README.md  bot.py  kik_bot.py  mutmut_config.py  pyproject.toml  setup.cfg
bot/: chat_bot.py  command.py  command_registry.py  profile_storage.py  statics.py  user.py  user_registry.py
dotty/: __init__.py  chat_bot.py  command.py  command_identifier.py  core.py  dynamo_storage.py  message.py  profile_storage.py  security_level.py  storage.py  user.py  user_registry.py
scripts/: black.sh  coverage_mamba.sh  coverage_pytest.sh  flake8.sh  format.sh  http_server.sh  isort.sh  lint.sh  mamba.sh  mutmut.sh  pytest.sh  serve.sh  sort.sh
spec/: chat_bot_spec.py  command_registry_spec.py  command_spec.py  core_spec.py  dotty_spec.py  fakes.py  message_spec.py  security_level_spec.py  static_spec.py  storage_spec.py  user_registry_spec.py  user_spec.py
src/dotty/: chat_bot.py  command.py  command_identifier.py  command_registry.py  command_type.py  dotty.py  message.py  profile_storage.py  user.py  user_registry.py
testing/: bot.py
tests/: test_something.py
