[tool.poetry]
name = "dotty"
version = "0.1.0"
description = ""
authors = ["nateu"]

[tool.poetry.dependencies]
python = "^3.10"
json-fix = "^0.1.3"
boto3 = "^1.22.0"
kik-unofficial = {path = "../kik-bot-api-unofficial"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
expects = "^0.9.0"
mamba = "^0.11.2"
coverage = "^6.1.2"
flake8 = "^4.0.1"
isort = "^5.10.1"
mutmut = "^2.4.0"
pytest = "^7.1.2"

[tool.mutmut]
paths_to_mutate="dotty/"
tests_dir="spec/"
runner="mamba --enable-coverage --format=documentation ./spec/*_spec.py"

[tool.black]
line-length = 140
target-version=["py310"]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | htmlcov
  )/
)
'''

[tool.isort]
line_length = 120
combine_as_imports = true
balanced_wrapping = true
lines_after_imports = 2
include_trailing_comma = true
multi_line_output = 5

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
