[tool.poetry]
name = "dotty"
version = "0.1.0"
description = ""
authors = ["nateu"]

[tool.poetry.dependencies]
boto3 = "^1.22.0"
json-fix = "^0.1.3"
kik-unofficial = {path = "../kik-bot-api-unofficial"}
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
coverage = { version = "^6.4.2", extras = [ "toml" ] }
expects = "^0.9.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mamba = "^0.11.2"
pytest = "^7.1.2"

[tool.coverage.run]
branch = true
omit = ["*__init__*"]
source = ["./bot/"]

[tool.mutmut]
paths_to_mutate="bot/"
runner="mamba --enable-coverage --format=documentation ./spec/*_spec.py"
tests_dir="spec/"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | htmlcov
  )/
)
'''
line-length = 140
target-version=["py310"]

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 140
lines_after_imports = 2
multi_line_output = 3

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
