[tool.poetry]
name = "dotty"
version = "1.0.0"
description = "An attempt at a chat bot"
authors = ["Nateu codes <info@artocraft.nl>"]

[tool.poetry.dependencies]
boto3 = "^1.22.0"
json-fix = "^0.3.0"
python = ">=3.8.0,<3.9"
kik-unofficial = {path = "src/kik-bot-api-unofficial"}

[tool.poetry.dev-dependencies]
black = "^22.8.0"
coverage = "^6.1.2"
expects = "^0.9.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mamba = "^0.11.2"
mutmut = "^2.4.0"
pytest = "^7.1.2"

[tool.poetry.extras]
coverage = ["toml"]

[tool.coverage.run]
branch = true
omit = ["./src/dotty/__init__.py"]
source = ["./src/dotty/"]

[tool.mutmut]
paths_to_mutate="./src/dotty/"
runner="mamba --enable-coverage --format=documentation ./spec/*_spec.py"
tests_dir="spec/"

[tool.black]
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | htmlcov
    | src/kik-bot-api-unofficial
  )/
)
'''
line-length = 140
target-version=["py38"]

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 140
lines_after_imports = 2
multi_line_output = 3

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
